--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -18,7 +18,7 @@
       <input type="submit" value="Review Movie"></input>
       </form>-->
 	  <a href="/Methodology" style="padding-right:25px;color:rgb(100,0,150);">How Does It Work?</a>
-	  <a href="/Validation" style="padding-left:25px;color:rgb(100,0,150);">Comparison With RottenTomatoes</a><a style = "color:rgb(245,210,0);"> &#8592; Read This!</a>
+	  <a href="/Validation" style="padding-left:25px;color:rgb(100,0,150);">Comparison With RottenTomatoes</a><a style = "color:rgb(245,210,0);text-shadow: 1px 1px 1px #000;"> &#8592; Read This!</a>
 	  <p></p>
 	  <hr style="border: 1px outset #595955;" color: rgb(100,0,150)>
 	</div>
@@ -31,7 +31,7 @@
 		<td>
 		<a href="/{{names[i,t]}}" style = "text-decoration:none">
           <img src="/static/images/Blank.jpg" width="25" height="255" style="opacity: 0;"><img src={{images[i,t]}} alt={{images[i,t]}} style="width:158px;height:235px;"><img src="/static/images/Blank.jpg" width="25" height="255" style="opacity: 0;">
-          <div class="caption" style={{fontsizes[i,t]}}>{{names[i,t]}}<br><span style = "color:rgb(245,210,0);font-size:20px">{{ratings[i,t]}}</span></div>
+          <div class="caption" style={{fontsizes[i,t]}}>{{names[i,t]}}<br><span style = "color:rgb(245,210,0);font-size:20px;text-shadow: 1px 1px 1px #000;">{{ratings[i,t]}}</span></div>
         </a>
 		</td>
 	  {% endfor %}
