--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -18,7 +18,7 @@
       <input type="submit" value="Review Movie"></input>
       </form>-->
 	  <a href="/Methodology" style="padding-right:25px;color:rgb(100,0,150);">How Does It Work?</a>
-	  <a href="/Validation" style="padding-left:25px;color:rgb(100,0,150);">Comparison With RottenTomatoes</a><a style = "color:rgb(245,210,0);"> &#8592; Read This!</a>
+	  <a href="/Validation" style="padding-left:25px;color:rgb(100,0,150);">Comparison With RottenTomatoes</a><a style = "color:rgb(245,210,0);text-shadow: 1px 1px 0 #000;"> &#8592; Read This!</a>
 	  <p></p>
 	  <hr style="border: 1px outset #595955;" color: rgb(100,0,150)>
 	</div>
