--- a/templates/moviepage.html
+++ b/templates/moviepage.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class=imgrate>
 	  <img src="/static/images/Blank.jpg" width="0" height="25" style="opacity: 0;"><img src={{image}} alt={{image}} style="width:120px;height:178px;" align="center"><img src="/static/images/Blank.jpg" width="65" height="25" style="opacity: 0;">
-	  <p4>Tweet<span style= "color: #fff;text-shadow:-1px -1px 0 rgb(100,0,150),1px -1px 0 rgb(100,0,150),-1px 1px 0 rgb(100,0,150),1px 1px 0 rgb(100,0,150); ">Sense</span> Rating:&nbsp;&nbsp;&nbsp;</p4><span style = "color:rgb(245,210,0);font-size:35px;text-shadow: 1px 1px 0 #000;">{{rating}}</span>
+	  <p4>Tweet<span style= "color: #fff;text-shadow:-1px -1px 0 rgb(100,0,150),1px -1px 0 rgb(100,0,150),-1px 1px 0 rgb(100,0,150),1px 1px 0 rgb(100,0,150); ">Sense</span> Rating:&nbsp;&nbsp;&nbsp;</p4><span style = "color:rgb(250,160,0);font-size:35px;">{{rating}}</span>
 	  <img src="/static/images/Blank.jpg" width="100" height="25" style="opacity: 0;">
 	</div>
 	<div>
